Notebooks/code/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> stmt_list
Rule 2     stmt_list -> stmt stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt -> ID = exp
Rule 5     stmt -> INPUT opt_string ID
Rule 6     stmt -> PRINT value value_list
Rule 7     stmt -> END
Rule 8     stmt -> IF exp THEN stmt_list opt_else ENDIF
Rule 9     stmt -> WHILE exp stmt_list ENDWHILE
Rule 10    stmt -> FOR ID = exp TO exp opt_step stmt_list NEXT ID
Rule 11    opt_string -> STRING ,
Rule 12    opt_string -> empty
Rule 13    value_list -> , value value_list
Rule 14    value_list -> empty
Rule 15    opt_else -> ELSE stmt_list
Rule 16    opt_else -> empty
Rule 17    opt_step -> STEP exp
Rule 18    opt_step -> empty
Rule 19    exp -> exp PLUS exp
Rule 20    exp -> exp MINUS exp
Rule 21    exp -> exp TIMES exp
Rule 22    exp -> exp DIVIDE exp
Rule 23    exp -> exp EQ exp
Rule 24    exp -> exp LE exp
Rule 25    exp -> exp AND exp
Rule 26    exp -> exp OR exp
Rule 27    exp -> INTEGER
Rule 28    exp -> ID
Rule 29    exp -> ( exp )
Rule 30    exp -> MINUS exp
Rule 31    exp -> NOT exp
Rule 32    value -> ID
Rule 33    value -> INTEGER
Rule 34    value -> STRING
Rule 35    empty -> <empty>

Terminals, with rules where they appear

(                    : 29
)                    : 29
,                    : 11 13
=                    : 4 10
AND                  : 25
DIVIDE               : 22
ELSE                 : 15
END                  : 7
ENDIF                : 8
ENDWHILE             : 9
EQ                   : 23
FOR                  : 10
ID                   : 4 5 10 10 28 32
IF                   : 8
INPUT                : 5
INTEGER              : 27 33
LE                   : 24
MINUS                : 20 30
NEXT                 : 10
NOT                  : 31
OR                   : 26
PLUS                 : 19
PRINT                : 6
STEP                 : 17
STRING               : 11 34
THEN                 : 8
TIMES                : 21
TO                   : 10
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

empty                : 12 14 16 18
exp                  : 4 8 9 10 10 17 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 29 30 31
opt_else             : 8
opt_step             : 10
opt_string           : 5
prog                 : 0
stmt                 : 2 3
stmt_list            : 1 2 8 9 10 15
value                : 6 13
value_list           : 6 13

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . stmt_list
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . ID = exp
    (5) stmt -> . INPUT opt_string ID
    (6) stmt -> . PRINT value value_list
    (7) stmt -> . END
    (8) stmt -> . IF exp THEN stmt_list opt_else ENDIF
    (9) stmt -> . WHILE exp stmt_list ENDWHILE
    (10) stmt -> . FOR ID = exp TO exp opt_step stmt_list NEXT ID

    ID              shift and go to state 4
    INPUT           shift and go to state 5
    PRINT           shift and go to state 6
    END             shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10

    prog                           shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3

state 1

    (0) S' -> prog .



state 2

    (1) prog -> stmt_list .

    $end            reduce using rule 1 (prog -> stmt_list .)


state 3

    (2) stmt_list -> stmt . stmt_list
    (3) stmt_list -> stmt .
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . ID = exp
    (5) stmt -> . INPUT opt_string ID
    (6) stmt -> . PRINT value value_list
    (7) stmt -> . END
    (8) stmt -> . IF exp THEN stmt_list opt_else ENDIF
    (9) stmt -> . WHILE exp stmt_list ENDWHILE
    (10) stmt -> . FOR ID = exp TO exp opt_step stmt_list NEXT ID

    $end            reduce using rule 3 (stmt_list -> stmt .)
    ENDWHILE        reduce using rule 3 (stmt_list -> stmt .)
    ELSE            reduce using rule 3 (stmt_list -> stmt .)
    ENDIF           reduce using rule 3 (stmt_list -> stmt .)
    NEXT            reduce using rule 3 (stmt_list -> stmt .)
    ID              shift and go to state 4
    INPUT           shift and go to state 5
    PRINT           shift and go to state 6
    END             shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10

    stmt                           shift and go to state 3
    stmt_list                      shift and go to state 11

state 4

    (4) stmt -> ID . = exp

    =               shift and go to state 12


state 5

    (5) stmt -> INPUT . opt_string ID
    (11) opt_string -> . STRING ,
    (12) opt_string -> . empty
    (35) empty -> .

    STRING          shift and go to state 14
    ID              reduce using rule 35 (empty -> .)

    opt_string                     shift and go to state 13
    empty                          shift and go to state 15

state 6

    (6) stmt -> PRINT . value value_list
    (32) value -> . ID
    (33) value -> . INTEGER
    (34) value -> . STRING

    ID              shift and go to state 17
    INTEGER         shift and go to state 18
    STRING          shift and go to state 19

    value                          shift and go to state 16

state 7

    (7) stmt -> END .

    ID              reduce using rule 7 (stmt -> END .)
    INPUT           reduce using rule 7 (stmt -> END .)
    PRINT           reduce using rule 7 (stmt -> END .)
    END             reduce using rule 7 (stmt -> END .)
    IF              reduce using rule 7 (stmt -> END .)
    WHILE           reduce using rule 7 (stmt -> END .)
    FOR             reduce using rule 7 (stmt -> END .)
    $end            reduce using rule 7 (stmt -> END .)
    ENDWHILE        reduce using rule 7 (stmt -> END .)
    ELSE            reduce using rule 7 (stmt -> END .)
    ENDIF           reduce using rule 7 (stmt -> END .)
    NEXT            reduce using rule 7 (stmt -> END .)


state 8

    (8) stmt -> IF . exp THEN stmt_list opt_else ENDIF
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 20

state 9

    (9) stmt -> WHILE . exp stmt_list ENDWHILE
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 26

state 10

    (10) stmt -> FOR . ID = exp TO exp opt_step stmt_list NEXT ID

    ID              shift and go to state 27


state 11

    (2) stmt_list -> stmt stmt_list .

    $end            reduce using rule 2 (stmt_list -> stmt stmt_list .)
    ENDWHILE        reduce using rule 2 (stmt_list -> stmt stmt_list .)
    ELSE            reduce using rule 2 (stmt_list -> stmt stmt_list .)
    ENDIF           reduce using rule 2 (stmt_list -> stmt stmt_list .)
    NEXT            reduce using rule 2 (stmt_list -> stmt stmt_list .)


state 12

    (4) stmt -> ID = . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 28

state 13

    (5) stmt -> INPUT opt_string . ID

    ID              shift and go to state 29


state 14

    (11) opt_string -> STRING . ,

    ,               shift and go to state 30


state 15

    (12) opt_string -> empty .

    ID              reduce using rule 12 (opt_string -> empty .)


state 16

    (6) stmt -> PRINT value . value_list
    (13) value_list -> . , value value_list
    (14) value_list -> . empty
    (35) empty -> .

    ,               shift and go to state 32
    ID              reduce using rule 35 (empty -> .)
    INPUT           reduce using rule 35 (empty -> .)
    PRINT           reduce using rule 35 (empty -> .)
    END             reduce using rule 35 (empty -> .)
    IF              reduce using rule 35 (empty -> .)
    WHILE           reduce using rule 35 (empty -> .)
    FOR             reduce using rule 35 (empty -> .)
    $end            reduce using rule 35 (empty -> .)
    ENDWHILE        reduce using rule 35 (empty -> .)
    ELSE            reduce using rule 35 (empty -> .)
    ENDIF           reduce using rule 35 (empty -> .)
    NEXT            reduce using rule 35 (empty -> .)

    value_list                     shift and go to state 31
    empty                          shift and go to state 33

state 17

    (32) value -> ID .

    ,               reduce using rule 32 (value -> ID .)
    ID              reduce using rule 32 (value -> ID .)
    INPUT           reduce using rule 32 (value -> ID .)
    PRINT           reduce using rule 32 (value -> ID .)
    END             reduce using rule 32 (value -> ID .)
    IF              reduce using rule 32 (value -> ID .)
    WHILE           reduce using rule 32 (value -> ID .)
    FOR             reduce using rule 32 (value -> ID .)
    $end            reduce using rule 32 (value -> ID .)
    ENDWHILE        reduce using rule 32 (value -> ID .)
    ELSE            reduce using rule 32 (value -> ID .)
    ENDIF           reduce using rule 32 (value -> ID .)
    NEXT            reduce using rule 32 (value -> ID .)


state 18

    (33) value -> INTEGER .

    ,               reduce using rule 33 (value -> INTEGER .)
    ID              reduce using rule 33 (value -> INTEGER .)
    INPUT           reduce using rule 33 (value -> INTEGER .)
    PRINT           reduce using rule 33 (value -> INTEGER .)
    END             reduce using rule 33 (value -> INTEGER .)
    IF              reduce using rule 33 (value -> INTEGER .)
    WHILE           reduce using rule 33 (value -> INTEGER .)
    FOR             reduce using rule 33 (value -> INTEGER .)
    $end            reduce using rule 33 (value -> INTEGER .)
    ENDWHILE        reduce using rule 33 (value -> INTEGER .)
    ELSE            reduce using rule 33 (value -> INTEGER .)
    ENDIF           reduce using rule 33 (value -> INTEGER .)
    NEXT            reduce using rule 33 (value -> INTEGER .)


state 19

    (34) value -> STRING .

    ,               reduce using rule 34 (value -> STRING .)
    ID              reduce using rule 34 (value -> STRING .)
    INPUT           reduce using rule 34 (value -> STRING .)
    PRINT           reduce using rule 34 (value -> STRING .)
    END             reduce using rule 34 (value -> STRING .)
    IF              reduce using rule 34 (value -> STRING .)
    WHILE           reduce using rule 34 (value -> STRING .)
    FOR             reduce using rule 34 (value -> STRING .)
    $end            reduce using rule 34 (value -> STRING .)
    ENDWHILE        reduce using rule 34 (value -> STRING .)
    ELSE            reduce using rule 34 (value -> STRING .)
    ENDIF           reduce using rule 34 (value -> STRING .)
    NEXT            reduce using rule 34 (value -> STRING .)


state 20

    (8) stmt -> IF exp . THEN stmt_list opt_else ENDIF
    (19) exp -> exp . PLUS exp
    (20) exp -> exp . MINUS exp
    (21) exp -> exp . TIMES exp
    (22) exp -> exp . DIVIDE exp
    (23) exp -> exp . EQ exp
    (24) exp -> exp . LE exp
    (25) exp -> exp . AND exp
    (26) exp -> exp . OR exp

    THEN            shift and go to state 34
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    EQ              shift and go to state 39
    LE              shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42


state 21

    (30) exp -> MINUS . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 43

state 22

    (27) exp -> INTEGER .

    THEN            reduce using rule 27 (exp -> INTEGER .)
    PLUS            reduce using rule 27 (exp -> INTEGER .)
    MINUS           reduce using rule 27 (exp -> INTEGER .)
    TIMES           reduce using rule 27 (exp -> INTEGER .)
    DIVIDE          reduce using rule 27 (exp -> INTEGER .)
    EQ              reduce using rule 27 (exp -> INTEGER .)
    LE              reduce using rule 27 (exp -> INTEGER .)
    AND             reduce using rule 27 (exp -> INTEGER .)
    OR              reduce using rule 27 (exp -> INTEGER .)
    ID              reduce using rule 27 (exp -> INTEGER .)
    INPUT           reduce using rule 27 (exp -> INTEGER .)
    PRINT           reduce using rule 27 (exp -> INTEGER .)
    END             reduce using rule 27 (exp -> INTEGER .)
    IF              reduce using rule 27 (exp -> INTEGER .)
    WHILE           reduce using rule 27 (exp -> INTEGER .)
    FOR             reduce using rule 27 (exp -> INTEGER .)
    $end            reduce using rule 27 (exp -> INTEGER .)
    ENDWHILE        reduce using rule 27 (exp -> INTEGER .)
    ELSE            reduce using rule 27 (exp -> INTEGER .)
    ENDIF           reduce using rule 27 (exp -> INTEGER .)
    NEXT            reduce using rule 27 (exp -> INTEGER .)
    )               reduce using rule 27 (exp -> INTEGER .)
    TO              reduce using rule 27 (exp -> INTEGER .)
    STEP            reduce using rule 27 (exp -> INTEGER .)


state 23

    (28) exp -> ID .

    THEN            reduce using rule 28 (exp -> ID .)
    PLUS            reduce using rule 28 (exp -> ID .)
    MINUS           reduce using rule 28 (exp -> ID .)
    TIMES           reduce using rule 28 (exp -> ID .)
    DIVIDE          reduce using rule 28 (exp -> ID .)
    EQ              reduce using rule 28 (exp -> ID .)
    LE              reduce using rule 28 (exp -> ID .)
    AND             reduce using rule 28 (exp -> ID .)
    OR              reduce using rule 28 (exp -> ID .)
    ID              reduce using rule 28 (exp -> ID .)
    INPUT           reduce using rule 28 (exp -> ID .)
    PRINT           reduce using rule 28 (exp -> ID .)
    END             reduce using rule 28 (exp -> ID .)
    IF              reduce using rule 28 (exp -> ID .)
    WHILE           reduce using rule 28 (exp -> ID .)
    FOR             reduce using rule 28 (exp -> ID .)
    $end            reduce using rule 28 (exp -> ID .)
    ENDWHILE        reduce using rule 28 (exp -> ID .)
    ELSE            reduce using rule 28 (exp -> ID .)
    ENDIF           reduce using rule 28 (exp -> ID .)
    NEXT            reduce using rule 28 (exp -> ID .)
    )               reduce using rule 28 (exp -> ID .)
    TO              reduce using rule 28 (exp -> ID .)
    STEP            reduce using rule 28 (exp -> ID .)


state 24

    (29) exp -> ( . exp )
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 44

state 25

    (31) exp -> NOT . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 45

state 26

    (9) stmt -> WHILE exp . stmt_list ENDWHILE
    (19) exp -> exp . PLUS exp
    (20) exp -> exp . MINUS exp
    (21) exp -> exp . TIMES exp
    (22) exp -> exp . DIVIDE exp
    (23) exp -> exp . EQ exp
    (24) exp -> exp . LE exp
    (25) exp -> exp . AND exp
    (26) exp -> exp . OR exp
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . ID = exp
    (5) stmt -> . INPUT opt_string ID
    (6) stmt -> . PRINT value value_list
    (7) stmt -> . END
    (8) stmt -> . IF exp THEN stmt_list opt_else ENDIF
    (9) stmt -> . WHILE exp stmt_list ENDWHILE
    (10) stmt -> . FOR ID = exp TO exp opt_step stmt_list NEXT ID

    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    EQ              shift and go to state 39
    LE              shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42
    ID              shift and go to state 4
    INPUT           shift and go to state 5
    PRINT           shift and go to state 6
    END             shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10

    stmt_list                      shift and go to state 46
    stmt                           shift and go to state 3

state 27

    (10) stmt -> FOR ID . = exp TO exp opt_step stmt_list NEXT ID

    =               shift and go to state 47


state 28

    (4) stmt -> ID = exp .
    (19) exp -> exp . PLUS exp
    (20) exp -> exp . MINUS exp
    (21) exp -> exp . TIMES exp
    (22) exp -> exp . DIVIDE exp
    (23) exp -> exp . EQ exp
    (24) exp -> exp . LE exp
    (25) exp -> exp . AND exp
    (26) exp -> exp . OR exp

    ID              reduce using rule 4 (stmt -> ID = exp .)
    INPUT           reduce using rule 4 (stmt -> ID = exp .)
    PRINT           reduce using rule 4 (stmt -> ID = exp .)
    END             reduce using rule 4 (stmt -> ID = exp .)
    IF              reduce using rule 4 (stmt -> ID = exp .)
    WHILE           reduce using rule 4 (stmt -> ID = exp .)
    FOR             reduce using rule 4 (stmt -> ID = exp .)
    $end            reduce using rule 4 (stmt -> ID = exp .)
    ENDWHILE        reduce using rule 4 (stmt -> ID = exp .)
    ELSE            reduce using rule 4 (stmt -> ID = exp .)
    ENDIF           reduce using rule 4 (stmt -> ID = exp .)
    NEXT            reduce using rule 4 (stmt -> ID = exp .)
    PLUS            shift and go to state 35
    MINUS           shift and go to state 36
    TIMES           shift and go to state 37
    DIVIDE          shift and go to state 38
    EQ              shift and go to state 39
    LE              shift and go to state 40
    AND             shift and go to state 41
    OR              shift and go to state 42


state 29

    (5) stmt -> INPUT opt_string ID .

    ID              reduce using rule 5 (stmt -> INPUT opt_string ID .)
    INPUT           reduce using rule 5 (stmt -> INPUT opt_string ID .)
    PRINT           reduce using rule 5 (stmt -> INPUT opt_string ID .)
    END             reduce using rule 5 (stmt -> INPUT opt_string ID .)
    IF              reduce using rule 5 (stmt -> INPUT opt_string ID .)
    WHILE           reduce using rule 5 (stmt -> INPUT opt_string ID .)
    FOR             reduce using rule 5 (stmt -> INPUT opt_string ID .)
    $end            reduce using rule 5 (stmt -> INPUT opt_string ID .)
    ENDWHILE        reduce using rule 5 (stmt -> INPUT opt_string ID .)
    ELSE            reduce using rule 5 (stmt -> INPUT opt_string ID .)
    ENDIF           reduce using rule 5 (stmt -> INPUT opt_string ID .)
    NEXT            reduce using rule 5 (stmt -> INPUT opt_string ID .)


state 30

    (11) opt_string -> STRING , .

    ID              reduce using rule 11 (opt_string -> STRING , .)


state 31

    (6) stmt -> PRINT value value_list .

    ID              reduce using rule 6 (stmt -> PRINT value value_list .)
    INPUT           reduce using rule 6 (stmt -> PRINT value value_list .)
    PRINT           reduce using rule 6 (stmt -> PRINT value value_list .)
    END             reduce using rule 6 (stmt -> PRINT value value_list .)
    IF              reduce using rule 6 (stmt -> PRINT value value_list .)
    WHILE           reduce using rule 6 (stmt -> PRINT value value_list .)
    FOR             reduce using rule 6 (stmt -> PRINT value value_list .)
    $end            reduce using rule 6 (stmt -> PRINT value value_list .)
    ENDWHILE        reduce using rule 6 (stmt -> PRINT value value_list .)
    ELSE            reduce using rule 6 (stmt -> PRINT value value_list .)
    ENDIF           reduce using rule 6 (stmt -> PRINT value value_list .)
    NEXT            reduce using rule 6 (stmt -> PRINT value value_list .)


state 32

    (13) value_list -> , . value value_list
    (32) value -> . ID
    (33) value -> . INTEGER
    (34) value -> . STRING

    ID              shift and go to state 17
    INTEGER         shift and go to state 18
    STRING          shift and go to state 19

    value                          shift and go to state 48

state 33

    (14) value_list -> empty .

    ID              reduce using rule 14 (value_list -> empty .)
    INPUT           reduce using rule 14 (value_list -> empty .)
    PRINT           reduce using rule 14 (value_list -> empty .)
    END             reduce using rule 14 (value_list -> empty .)
    IF              reduce using rule 14 (value_list -> empty .)
    WHILE           reduce using rule 14 (value_list -> empty .)
    FOR             reduce using rule 14 (value_list -> empty .)
    $end            reduce using rule 14 (value_list -> empty .)
    ENDWHILE        reduce using rule 14 (value_list -> empty .)
    ELSE            reduce using rule 14 (value_list -> empty .)
    ENDIF           reduce using rule 14 (value_list -> empty .)
    NEXT            reduce using rule 14 (value_list -> empty .)


state 34

    (8) stmt -> IF exp THEN . stmt_list opt_else ENDIF
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt -> . ID = exp
    (5) stmt -> . INPUT opt_string ID
    (6) stmt -> . PRINT value value_list
    (7) stmt -> . END
    (8) stmt -> . IF exp THEN stmt_list opt_else ENDIF
    (9) stmt -> . WHILE exp stmt_list ENDWHILE
    (10) stmt -> . FOR ID = exp TO exp opt_step stmt_list NEXT ID

    ID              shift and go to state 4
    INPUT           shift and go to state 5
    PRINT           shift and go to state 6
    END             shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10

    stmt_list                      shift and go to state 49
    stmt                           shift and go to state 3

state 35

    (19) exp -> exp PLUS . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 50

state 36

    (20) exp -> exp MINUS . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 51

state 37

    (21) exp -> exp TIMES . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 52

state 38

    (22) exp -> exp DIVIDE . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 53

state 39

    (23) exp -> exp EQ . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 54

state 40

    (24) exp -> exp LE . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 55

state 41

    (25) exp -> exp AND . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 56

state 42

    (26) exp -> exp OR . exp
    (19) exp -> . exp PLUS exp
    (20) exp -> . exp MINUS exp
    (21) exp -> . exp TIMES exp
    (22) exp -> . exp DIVIDE exp
    (23) exp -> . exp EQ exp
    (24) exp -> . exp LE exp
    (25) exp -> . exp AND exp
    (26) exp -> . exp OR exp
    (27) exp -> . INTEGER
    (28) exp -> . ID
    (29) exp -> . ( exp )
    (30) exp -> . MINUS exp
    (31) exp -> . NOT exp

    INTEGER         shift and go to state 22
    ID              shift and go to state 23
    (               shift and go to state 24
    MINUS           shift and go to state 21
    NOT             shift and go to state 25

    exp                            shift and go to state 57

state 43

    (30) exp -> MINUS exp .
    (19) exp -> exp . PLUS exp
    (20) exp -> exp . MINUS exp
    (21) exp -> exp . TIMES exp
    (22) exp -> exp . DIVIDE exp
    (23) exp -> exp . EQ exp
    (24) exp -> exp . LE exp
    (25) exp -> exp . AND exp
    (26) exp -> exp . OR exp

    THEN            reduce using rule 30 (exp -> MINUS exp .)
    PLUS            reduce using rule 30 (exp -> MINUS exp .)
    MINUS           reduce using rule 30 (exp -> MINUS exp .)
    TIMES           reduce using rule 30 (exp -> MINUS exp .)
    DIVIDE          reduce using rule 30 (exp -> MINUS exp .)
    EQ              reduce using rule 30 (exp -> MINUS exp .)
    LE              reduce using rule 30 (exp -> MINUS exp .)
    AND             reduce using rule 30 (exp -> MINUS exp .)
    OR              reduce using rule 30 (exp -> MINUS exp .)
    ID              reduce using rule 30 (exp -> MINUS exp .)
    INPUT           reduce using rule 30 (exp -> MINUS exp .)
    PRINT           reduce using rule 30 (exp -> MINUS exp .)
    END             reduce using rule 30 (exp -> MINUS exp .)
    IF              reduce using rule 30 (exp -> MINUS exp .)
    WHILE           reduce using rule 30 (exp -> MINUS exp .)
    FOR             reduce using rule 30 (exp -> MINUS exp .)
    $end            reduce using rule 30 (exp -> MINUS exp .)
    ENDWHILE        reduce using rule 30 (exp -> MINUS exp .)
    ELSE            reduce using rule 30 (exp -> MINUS exp .)
    ENDIF           reduce using rule 30 (exp -> MINUS exp .)
    NEXT            reduce using rule 30 (exp -> MINUS exp .)
    )               reduce using rule 30 (exp -> MINUS exp .)
    TO              reduce using rule 30 (exp -> MINUS exp .)
    STEP            reduce using rule 30 (exp -> MINUS exp .)
